solve leaderboard completed tasks alignment issue

--- a/src/components/ContributorTasks/ContributorTasks.scss
+++ b/src/components/ContributorTasks/ContributorTasks.scss
@@ -10,6 +10,7 @@
   th {
     padding: 2px 0 2px 12px;
     white-space: nowrap;
+    vertical-align: middle;
 
     &:first-of-type {
       padding-left: 12px;
